# xleap

./: .gitignore  404.html  CNAME  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs_build_and_deploy.yml
assets/css/: styles.5647c41b.css  styles.81317a8c.css
assets/js/: 01a85c17.b13fd977.js  01a85c17.d81b883f.js  031793e1.30e4af70.js  031793e1.625499d6.js  03cc7214.beb6ab6e.js  096bfee4.2ac3e9e8.js  096bfee4.86521715.js  0e384e19.0dd0b64e.js  0e384e19.9ef13576.js  0e384e19.aff24194.js  0e384e19.db7020d5.js  0e384e19.f180619f.js  14eb3368.3a0eeefc.js  14eb3368.44de6011.js  14eb3368.63bc9552.js  17896441.35616f32.js  17896441.7fd618c0.js  17896441.c6d7bee4.js  18c41134.2e7d0654.js  18c41134.42fce49e.js  18c41134.aee73be8.js  1df93b7f.24df0220.js  1df93b7f.27cc9113.js  1df93b7f.a5193b17.js  1df93b7f.b876d98d.js  1e4232ab.1ec985e1.js  1e4232ab.39656cfc.js  1e4232ab.403c2103.js  1e4232ab.80b836c5.js  1f391b9e.a988dfda.js  1f391b9e.e1e1bd5c.js  2237.ca48f511.js  237.ace33c40.js  28b67f00.e60e3d35.js  30a24c52.c2e446c6.js  30a24c52.d31c38c3.js  3152febb.454ada62.js  3152febb.99d7e636.js  3152febb.c9960d4d.js  393be207.4f39de58.js  (+143 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
docs/: .prettierignore  .prettierrc  CNAME  bun.lockb  docusaurus.config.ts  package.json
docs/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md
docs/category/getting-started/: index.html
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/docs/: intro.md
docs/docs/getting-started/: _category_.json  congratulations.md  using-js-api.md  using-python-requests.md  using-python-sdk.md
docs/docs/tutorial-basics/: create-a-page.md  markdown-features.mdx
docs/getting-started/congratulations/: index.html
docs/getting-started/using-js-api/: index.html
docs/getting-started/using-python-requests/: index.html
docs/getting-started/using-python-sdk/: index.html
docs/intro/: index.html
docs/src/pages/: index.tsx
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
docs/tutorial-basics/markdown-features/: index.html
docs/tutorial-basics/using-js-api/: index.html
markdown-page/: index.html
xleap/: __main__.py  chat.py  client.py  config.py  parser.py  sdk.py
xleap/_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
xleap/analytics/: config.py  prompt.py
xleap/metrics/: common.py  config.py  core.py  data_row.py  evaluate.py  llm_factory.py  run.py  schema.py  spec.py  transformer.py  validation.py
xleap/openai/: __init__.py  openai.py
xleap/utils/: __init__.py  login.py
(+128 files in other folders)
