[tool.poetry]
authors     = ["Pritam Soni <23050213+pritamsoni-hsr@users.noreply.github.com>"]
description = ""
name        = "xleap"
readme      = "README.md"
version     = "0.1.0"

include  = ["CHANGELOG.md"]
packages = [{ include = "xleap" }]


  [tool.poetry.dependencies]
  attrs           = ">=21.3.0"
  httpx           = ">=0.20.0,<0.27.0"
  python          = "^3.11"
  python-dateutil = "^2.8.0"
  typer           = "^0.9.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.ruff]
line-length = 120
select      = ["F", "I"]
