[tool.poetry]
authors     = ["Pritam Soni <23050213+pritamsoni-hsr@users.noreply.github.com>"]
description = ""
name        = "xleap"
readme      = "README.md"
version     = "0.1.1"

include  = ["CHANGELOG.md"]
packages = [{ include = "xleap" }]


  [tool.poetry.dependencies]
  attrs           = ">=21.3.0"
  openai          = "^1.9.0"
  python          = "^3.11"
  python-dateutil = "^2.8.0"
  typer           = "^0.9.0"
  datasets = "^2.17.0"
  rich = "^13.7.0"
  langchain = "^0.1.7"
  textstat = "^0.7.3"
  evaluate = "^0.4.1"
  sentence-transformers = "^2.3.1"
  rouge-score = "^0.1.2"
  numpy = "1.23.5"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-click = "^0.8.1"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.24.0"}
mkdocs-material = "^9.5.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.ruff]
line-length = 120
select      = ["F", "I"]
